[tool.poetry]
name = "pplasma-laboratory-research"
version = "0.1.0"
description = "Virtualenv for plasma analysis lab"
authors = ["Margarita Nikolskaya <m.nikolskaya@yadro.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
